--- a/src/BellonBundle/Resources/views/Preview/category.preview.list.html.twig
+++ b/src/BellonBundle/Resources/views/Preview/category.preview.list.html.twig
@@ -2,6 +2,8 @@
 
 {% block field%}
     <div>
-        <img src="{{ object | itm_ipw_path('image') | imagine_filter('crop_preview') }}" />
+        {% if object | itm_ipw_exists('image') %}
+            <img src="{{ object | itm_ipw_path('image') | imagine_filter('crop_preview') }}" />
+        {% endif %}
     </div>
 {% endblock %}
