--- a/src/BellonBundle/Resources/views/layout.html.twig
+++ b/src/BellonBundle/Resources/views/layout.html.twig
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('css/variant4-bw.css') }}">
+    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="{{ asset('favicon.ico') }}" />
 
     {% block stylesheets %}
     {% endblock %}
