--- a/web/css/style.css
+++ b/web/css/style.css
@@ -138,7 +138,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Abel', sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #333;
