--- a/src/BellonBundle/Resources/views/layout.html.twig
+++ b/src/BellonBundle/Resources/views/layout.html.twig
@@ -8,7 +8,7 @@
     <title>Bellon</title>
 
     <link rel="stylesheet" href="{{ asset('css/icons/entypo/css/entypo.css') }}">
-    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('css/variant4-bw.css') }}">
