--- a/web/css/style.css
+++ b/web/css/style.css
@@ -138,7 +138,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: 'Abel', sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #333;
@@ -7480,8 +7480,7 @@ a:focus {
   color: #ff6138;
 }
 body {
-  /*font-family: 'Open Sans', sans-serif;*/
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Inconsolata';
   font-weight: 400;
 }
 body.pat1 {
