--- a/src/BellonBundle/Resources/views/layout.html.twig
+++ b/src/BellonBundle/Resources/views/layout.html.twig
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-    <title>Bellon</title>
+    {% block meta_tags %}
+        <title>Bellon</title>
+    {% endblock meta_tags %}
 
     <link rel="stylesheet" href="{{ asset('css/icons/entypo/css/entypo.css') }}">
     <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
