meta tags у продукта и категории

--- a/src/BellonBundle/Resources/views/Default/product.html.twig
+++ b/src/BellonBundle/Resources/views/Default/product.html.twig
@@ -1,5 +1,11 @@
 {% extends 'BellonBundle::layout.html.twig' %}
 
+    {% block meta_tags %}
+        {% if product.metaTitle is not empty %}<title>{{ product.metaTitle }}</title>{% endif %}
+        {% if product.metaDescription is not empty %}<meta name="description" content="{{ product.metaDescription }}">{% endif %}
+        {% if product.metaKeywords is not empty %}<meta name="keywords" content="{{ product.metaKeywords }}">{% endif %}
+    {%  endblock meta_tags %}
+
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/jquery.fancybox.css') }}" type="text/css" media="screen" />
         <link rel="stylesheet" href="{{ asset('css/jquery.fancybox-buttons.css') }}" type="text/css" media="screen" />
