--- a/src/BellonBundle/Resources/views/Default/categoryProducts.html.twig
+++ b/src/BellonBundle/Resources/views/Default/categoryProducts.html.twig
@@ -1,5 +1,11 @@
 {% extends 'BellonBundle::layout.html.twig' %}
 
+{% block meta_tags %}
+    {% if category.metaTitle is not empty %}<title>{{ category.metaTitle }}</title>{% endif %}
+    {% if category.metaDescription is not empty %}<meta name="description" content="{{ category.metaDescription }}">{% endif %}
+    {% if category.metaKeywords is not empty %}<meta name="keywords" content="{{ category.metaKeywords }}">{% endif %}
+{%  endblock meta_tags %}
+
 {% block content %}
     <div class="container">
 
