--- a/web/css/style.css
+++ b/web/css/style.css
@@ -4384,7 +4384,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > .active > a:focus {
   color: #555;
   text-decoration: none;
-  background-color: #e6e6e6;
+  /*background-color: #e6e6e6;*/
   -webkit-box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
   -moz-box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
   box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
@@ -7942,7 +7942,7 @@ ul.menuIcon .search a:before {
   -moz-box-shadow: none;
   box-shadow: none;
   border: 0;
-  color: #fff;
+  color: rgba(90, 141, 249, 0.84);
 }
 .navbar .nav li.dropdown.open > .dropdown-toggle,
 .navbar .nav li.dropdown.active > .dropdown-toggle,
