--- a/web/css/style.css
+++ b/web/css/style.css
@@ -10767,3 +10767,7 @@ ul.commentList .oneComment:hover .metaIcon {
 .span3.navigation{
     margin-top: 50px;
 }
+
+.inner.product{
+  max-height: 218px;
+}
