--- a/src/BellonBundle/Resources/views/Default/contacts.html.twig
+++ b/src/BellonBundle/Resources/views/Default/contacts.html.twig
@@ -8,35 +8,37 @@
 
 {% block content %}
     <div class="contactMap">
-        <div class="gmap-marker">
-            <span class="entypo location"><i></i></span>
-        </div>
+        {#<div class="gmap-marker">#}
+            {#<span class="entypo location"><i></i></span>#}
+        {#</div>#}
 
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-        <script type="text/javascript">
+        {#<script type="text/javascript">#}
 
-            function initialize() {
-                var mapDiv = document.getElementById('map-canvas');
-                var latLng = new google.maps.LatLng(53.9045215,27.5880647);
-                var map = new google.maps.Map(mapDiv, {
-                    center: latLng,
-                    zoom: 17,
-                    scrollwheel: false,
-                    navigationControl: false,
-                    mapTypeControl: false,
-                    scaleControl: false,
-                    draggable: false,
-                    disableDefaultUI: true,
-                    mapTypeId: google.maps.MapTypeId.HYBRID
-                });
-            }
+            {#function initialize() {#}
+                {#var mapDiv = document.getElementById('map-canvas');#}
+                {#var latLng = new google.maps.LatLng(53.9045215,27.5880647);#}
+                {#var map = new google.maps.Map(mapDiv, {#}
+                    {#center: latLng,#}
+                    {#zoom: 17,#}
+                    {#scrollwheel: false,#}
+                    {#navigationControl: false,#}
+                    {#mapTypeControl: false,#}
+                    {#scaleControl: false,#}
+                    {#draggable: false,#}
+                    {#disableDefaultUI: true,#}
+                    {#mapTypeId: google.maps.MapTypeId.HYBRID#}
+                {#});#}
+            {#}#}
 
 
-            google.maps.event.addDomListener(window, 'load', initialize);
-            google.maps.event.addDomListener(window, 'resize', initialize);
-        </script>
+            {#google.maps.event.addDomListener(window, 'load', initialize);#}
+            {#google.maps.event.addDomListener(window, 'resize', initialize);#}
+        {#</script>#}
 
-        <div id="map-canvas" style="width: 100%; height: 485px"></div>
+        {#<div id="map-canvas">#}
+            <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zL5UMuZciNyY.k3LRijC_n_hE&z=16" width="100%" height="485" frameborder="0" style="border:0"></iframe>
+        {#</div>#}
 
         <div class="contactInfoBox">
             <strong>Bellon</strong>
