--- a/web/css/style.css
+++ b/web/css/style.css
@@ -7557,7 +7557,7 @@ hr {
 }
 /* headers */
 .light {
-  font-size: 24px;
+  /*font-size: 24px;*/
   line-height: 35px;
   font-weight: 300;
   margin-bottom: 9px;
