--- a/src/BellonBundle/Resources/views/Default/product.html.twig
+++ b/src/BellonBundle/Resources/views/Default/product.html.twig
@@ -65,8 +65,8 @@
                         {{ product.shortDescription }}
                     <br>
                     <br>
-                    <p><span class="entypo tools metaText"><i></i>Цена за мелкий опт(от 10): {{ product.minCost }}</span></p>
-                    <p><span class="entypo tools metaText"><i></i>Цена за крупный опт(от 50):{{ product.maxCost }}</span></p>
+                    <p><span class="entypo tools metaText"><i></i>Цена за мелкий опт(от 10): {{ product.minCost }} / {{ product.minCost / 10000}}</span></p>
+                    <p><span class="entypo tools metaText"><i></i>Цена за крупный опт(от 50):{{ product.maxCost }} / {{ product.maxCost /10000 }}</span></p>
                     <br>
                 </div>
             </div>
